infra/gatekeeper/constraints/no-root-user-constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoRootUser
metadata:
  name: no-root-user
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces:
      - "secureflow"
